[package]
name = "repr-trait-derive"
version = "0.1.0"
authors = ["Daniel Dulaney <dulaney.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.syn]
version = "1"
features = ["extra-traits"]

[dependencies.quote]
version = "1"

[lib]
proc_macro = true
