[package]
name = "repr-trait-derive"
version = "1.0.0"
authors = ["Daniel Dulaney <dulaney.daniel@gmail.com>"]
edition = "2018"
description = "Derive macros for working with repr-trait"
readme = "README.md"
repository = "https://github.com/danieldulaney/repr-trait/"
license = "MIT"
keywords = ["trait", "repr", "derive"]
categories = ["memory-management", "rust-patterns"]

[dependencies]
syn = "1"
quote = "1"

[lib]
proc_macro = true
