[package]
name = "repr-trait"
version = "1.0.0"
authors = ["Daniel Dulaney <dulaney.daniel@gmail.com>"]
edition = "2018"
description = "Traits to represent Rust reprs"
readme = "../README.md"
repository = "https://github.com/danieldulaney/repr-trait/"
license = "MIT"
keywords = ["trait", "repr", "derive"]
categories = ["memory-management", "rust-patterns"]

[dependencies]
repr-trait-derive = { version = "1.0", path = "../repr-trait-derive" }

[dev-dependencies]
trybuild = "1"
